# graphisoft-park-restaurant-menu

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
src/graphisoft_park_restaurant_menu/: __init__.py  main.py  menu_scraper.py  notification.py
